@@ -398,6 +398,9 @@ Bug Fixes
 * SOLR-8280: Fixed bug in SimilarityFactory initialization that prevented SolrCoreAware factories -- such
   as SchemaSimilarityFactory -- from functioning properly with managed schema features. (hossman)
 
+* SOLR-5971: Fix error 'Illegal character in query' when proxying request.
+  (Uwe Schindler, Ishan Chattopadhyaya, Eric Bus)
+
 Optimizations
 ----------------------
 
